force-app/main/default/objects/NPN_POS_Submissions_ComplianceKey__mdt/NPN_POS_Submissions_ComplianceKey__mdt.object-meta.xml
<CustomObject>
    <label>NPN POS Submissions ComplianceKey</label>
    <pluralLabel>NPN POS Submissions ComplianceKeys</pluralLabel>
</CustomObject>