force-app/main/default/objects/NPN_POS_Submissions_ComplianceKey__mdt/fields/Partner_Competency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Competency__c</fullName>
    <label>Partner Competency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>