force-app/main/default/objects/NPN_POS_Submissions_ComplianceKey__mdt/fields/Partner_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Name__c</fullName>
    <label>Partner Program Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>