force-app/main/default/objects/NPN_POS_Submissions_ComplianceKey__mdt/fields/Partner_Sub_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sub_Program__c</fullName>
    <label>Partner Sub Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>