force-app/main/default/objects/NPN_POS_Submissions_ComplianceKey__mdt/fields/Program_Level__c.field-meta.xml
<CustomField>
    <fullName>Program_Level__c</fullName>
    <label>Program Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>